# ConsensusTesting

./: .dockerignore  .gitignore  .gitmodules  ArtifactInstructions.md  Cargo.toml  Dockerfile  Makefile  README.md  analyze.py  pom.xml  pull.txt  results.txt  rippled.Dockerfile  run.sh  scenarios.txt  script.ps1  subscription_0.json  subscription_1.json  subscription_2.json  subscription_3.json  subscription_4.json  subscription_5.json  subscription_6.json
.devcontainer/: devcontainer.json
Meeting notes/: Green Light Meeting Notes.docx  Meeting Notes 03-05-2022.docx  Meeting Notes 05-04-2022.docx  Meeting Notes 08-02-2022.docx  Meeting Notes 08-03.docx  Meeting Notes 14-06-2022.docx  Meeting Notes 17-05-2022.docx  Meeting Notes 19-04-2022.docx  Meeting Notes 22-03-2022.docx  Meeting Notes 22.docx  Meeting Notes 24-05-2022.docx  Meeting notes 25-01-2022.docx  Meeting notes 28-06-2022.docx  Notes 06-07-2021.md  Notes 11-01-2022.docx  Notes 11-05-2021.md  Notes 14-12-2021.docx  Notes 16-11-2021.txt  Notes 19-10-2021.txt  Notes 28-09-2021.md  Notes 30-11-2021.docx  Notes 30-11-2021.txt  notes 04-05-2021.md  notes 08-06-2021.md  notest 04-05-2021.md  ~$een Light Meeting Notes.docx  ~$eting Notes 03-05-2022.docx  ~$eting Notes 05-04-2022.docx  ~$eting Notes 14-06-2022.docx  ~$eting Notes 17-05-2022.docx  ~$eting Notes 19-04-2022.docx  ~$eting Notes 24-05-2022.docx  ~$eting notes 28-06-2022.docx  ~$tes 14-12-2021.docx  ~$tes 30-11-2021.docx
Papers/: README.md
analysis/: Script.R  executions0Delay.txt  executions50Chromosomes.txt  graph1.dot  graph2.dot  graph_edit_distance.py  outfile.ps  regression.r  results.txt  schedule_similarity.py  statistics.py  stats.r
analyze/: Cargo.toml
analyze/src/: analyzer.rs  main.rs
config/: cfg.json  cluster_seeds.json  cluster_seeds.txt  rippled-proxy-base.cfg  rippled-proxy-config-val1.cfg  rippled.cfg  rippled_exe.cfg  testing-validator-keys.json  validator-keys_0.json  validator-keys_1.json  validator-keys_12.json  validator-keys_14.json  validator-keys_2.json  validator-keys_4.json  validator-keys_6.json  validator-keys_7.json  validators.txt
documents/: Architecture.drawio  Communication.drawio  DataExcel.csv  DataExcel.xlsx  Design decisions.txt  Design ideas.txt  Design.drawio  EA.drawio  Mapping.drawio  MessageDelayEncoding.drawio  NewDesign.drawio  PMX.drawio  Research Questions.docx  Research question.txt  Scheduler.drawio  ~$search Questions.docx
ged/: Cargo.toml
rippled-docker/: Build  Build-Rippled  Dockerfile  (+11 more)
rust-ripple-p2p/: Cargo.toml  README.md  analyze.py  build.rs  config.json  config_example.json  delay_locality_config.json  execution-1656802905.txt  execution-1656803803.txt  execution-1656817904.txt  execution-1656822518.txt  execution-1656830093.txt  execution-1656834013.txt  execution-1656834953.txt  execution-ol-1656865609-florena.txt  execution-ol-1656872204.txt  execution-ol-1656877146.txt  execution-ol-1656880340.txt  execution-ol-1656880978.txt  execution-ol-1656887821.txt  execution.txt  execution2.txt  fitness_values.txt  harness.txt  harness_test.txt  priority_locality_config.json  results-buggy-7-3-0-6-any-scope-0.2.1.txt  results-buggy-7-3-0-6-baseline-0.2.1.txt  results-buggy-7-3-0-6-baseline-0.2.2.txt  results-buggy-7-3-0-6-small-scope-0.2.0.txt  results-buggy-reproduce-7-3-0-6-small-scope-0.2.3.txt  results.txt  results2-reproduce.txt  run.txt  trace_graphs.txt
rust-ripple-p2p/.cargo/: config.toml
rust-ripple-p2p/src/: README.md  app.rs  byzzfuzz.rs  client.rs  collector.rs  consensus_properties.rs  container_manager.rs  crypto.rs  executable_manager.rs  failure_writer.rs  ga.rs  genetic_algorithm.rs  locality.rs  main.rs  message_handler.rs  node_state.rs  peer_connection.rs  powershell.rs  protos.rs  scaling.rs  scheduler.rs  spec_checker.rs  specs.rs  test_harness.rs  toxiproxy.rs  trace_comparisons.rs  utils.rs
rust-ripple-p2p/src/deserialization/: blob_iterator.rs  blob_parser.rs  definitions_fields.rs  mod.rs  parser.rs  transaction.rs
rust-ripple-p2p/src/deserialization/types/: accountid.rs  amount.rs  blob.rs  hash256.rs  mod.rs  uint16.rs  uint32.rs  uint64.rs  uint8.rs  vector256.rs
rust-ripple-p2p/src/ga/: crossover.rs  delay_encoding.rs  encoding.rs  fitness.rs  genetic_algorithm.rs  mutation.rs  parameters.rs  population_builder.rs  priority_encoding.rs  reinsertion.rs  selection.rs
rust-ripple-p2p/src/ga/encoding/: delay_encoding.rs  priority_encoding.rs
rust-ripple-p2p/src/ga/fitness/: compared_fitness_functions.rs  delay_fitness.rs  failed_consensus_fitness.rs  propose_seq_fitness.rs  state_accounting_fitness.rs  time_fitness.rs  validated_ledgers_fitness.rs
rust-ripple-p2p/src/protos/: ripple.rs
rust-ripple-p2p/src/scheduler/: delay_scheduler.rs  inbox_scheduler.rs  priority_scheduler.rs
rust-ripple-p2p/src/specs/: incompatible_ledger.rs  insufficient_support.rs  timeout.rs
rust-ripple-p2p/src/trace_comparisons/: compare.rs  compare_fitness.rs
serialize/: Cargo.toml  build.rs
serialize/protos/: ripple.proto
serialize/src/: lib.rs  parser.rs  ripple.rs
serialize/src/deserialization/: definitions.json
(+617 files in other folders)
