[package]
name = "rust-ripple-p2p"
version = "0.2.0"
authors = ["Martijn van Meerten <m.c.vanmeerten@student.tudelft.nl"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
protobuf-codegen-pure = "2.3"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[dependencies]
base64 = "0.12.0"
byteorder = "1"
bytes = "0.5.4"
futures = "0.3"
hex = "0.4.2"
httparse = "1.3.4"
native-tls = "0.2.4"
num_cpus = "1.12"
openssl = { version = "0.10.36" }
sha2 = "0.8.1"
secp256k1 = "0.20.3"
tokio = { version = "1.13.0", features = ["full"] }
tokio-openssl = "0.6.3"
protobuf = { version = "2" }
websocket = "0.26.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
powershell_script = "0.2.1"
bs58 = { version = "0.4.0", features = ["check"] }
ripemd160 = "0.9.1"
ripple-address-codec = "0.1.1"
env_logger = "0.9.0"
log = "0.4.14"
itertools = "0.10.1"
chrono = "0.4.19"
jql = "3.0.4"
rayon = "1.5.1"
json = "0.12.4"
xrpl-rust = "0.1.1"
rippled_binary_codec = "0.0.4"
ripple-keypairs = "0.1.0"
nom = "7.1.1"
lazy_static = "1.4.0"
